# serializer version: 1
# name: TestRankCriterionFilterEntities.test_ranks_explicit[datetime-event]
  shape: (100, 9)
  ┌─────┬─────────────┬─────────────┬────────────┬───┬────────────┬─────────┬────────────┬───────────┐
  │ id  ┆ time        ┆ duration    ┆ flag_valid ┆ … ┆ response_t ┆ status  ┆ token_emb  ┆ value     │
  │ --- ┆ ---         ┆ ---         ┆ ---        ┆   ┆ ime        ┆ ---     ┆ ---        ┆ ---       │
  │ i64 ┆ datetime[μs ┆ i64         ┆ bool       ┆   ┆ ---        ┆ str     ┆ array[f32, ┆ f64       │
  │     ┆ ]           ┆             ┆            ┆   ┆ i64        ┆         ┆ 32]        ┆           │
  ╞═════╪═════════════╪═════════════╪════════════╪═══╪════════════╪═════════╪════════════╪═══════════╡
  │ 1   ┆ 2000-10-05  ┆ 15551990000 ┆ false      ┆ … ┆ null       ┆ warn    ┆ [0.215175, ┆ 0.541712  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆            ┆         ┆ 0.725006,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.24879… ┆           │
  │ 1   ┆ 2000-10-25  ┆ 20735990000 ┆ true       ┆ … ┆ null       ┆ error   ┆ [0.830483, ┆ -0.208379 │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆            ┆         ┆ 0.678199,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.29341… ┆           │
  │ 2   ┆ 2000-05-20  ┆ 24191990000 ┆ true       ┆ … ┆ null       ┆ warn    ┆ [0.030795, ┆ 0.29103   │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆            ┆         ┆ 0.535796,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.51113… ┆           │
  │ 2   ┆ 2000-06-21  ┆ 17279990000 ┆ true       ┆ … ┆ null       ┆ pending ┆ [0.768161, ┆ 1.933169  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆            ┆         ┆ 0.494302,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.10754… ┆           │
  │ 3   ┆ 2000-06-17  ┆ 19007990000 ┆ true       ┆ … ┆ null       ┆ ok      ┆ [0.066989, ┆ 0.937404  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆            ┆         ┆ 0.205188,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.15021… ┆           │
  │ …   ┆ …           ┆ …           ┆ …          ┆ … ┆ …          ┆ …       ┆ …          ┆ …         │
  │ 48  ┆ 2000-02-09  ┆ 13823990000 ┆ null       ┆ … ┆ 34170      ┆ ok      ┆ null       ┆ 1.012743  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆            ┆         ┆            ┆           │
  │ 49  ┆ 2000-05-17  ┆ 25055990000 ┆ null       ┆ … ┆ 29542      ┆ error   ┆ null       ┆ 0.151807  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆            ┆         ┆            ┆           │
  │ 49  ┆ 2000-05-30  ┆ 10367990000 ┆ null       ┆ … ┆ 12596      ┆ ok      ┆ null       ┆ 0.240084  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆            ┆         ┆            ┆           │
  │ 50  ┆ 2000-10-30  ┆ 95039900000 ┆ null       ┆ … ┆ 40110      ┆ error   ┆ null       ┆ -0.571799 │
  │     ┆ 00:00:00    ┆ 0           ┆            ┆   ┆            ┆         ┆            ┆           │
  │ 50  ┆ 2000-11-22  ┆ 16415990000 ┆ null       ┆ … ┆ 35807      ┆ warn    ┆ null       ┆ -0.942775 │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆            ┆         ┆            ┆           │
  └─────┴─────────────┴─────────────┴────────────┴───┴────────────┴─────────┴────────────┴───────────┘
# ---
# name: TestRankCriterionFilterEntities.test_ranks_explicit[datetime-interval]
  shape: (100, 10)
  ┌─────┬─────────────┬─────────────┬────────────┬───┬────────────┬─────────┬────────────┬───────────┐
  │ id  ┆ start       ┆ end         ┆ duration   ┆ … ┆ response_t ┆ status  ┆ token_emb  ┆ value     │
  │ --- ┆ ---         ┆ ---         ┆ ---        ┆   ┆ ime        ┆ ---     ┆ ---        ┆ ---       │
  │ i64 ┆ datetime[μs ┆ datetime[μs ┆ i64        ┆   ┆ ---        ┆ str     ┆ array[f32, ┆ f64       │
  │     ┆ ]           ┆ ]           ┆            ┆   ┆ i64        ┆         ┆ 32]        ┆           │
  ╞═════╪═════════════╪═════════════╪════════════╪═══╪════════════╪═════════╪════════════╪═══════════╡
  │ 1   ┆ 2000-10-05  ┆ 2000-10-22  ┆ 1555199000 ┆ … ┆ null       ┆ warn    ┆ [0.215175, ┆ 0.541712  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 000        ┆   ┆            ┆         ┆ 0.725006,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.24879… ┆           │
  │ 1   ┆ 2000-10-25  ┆ 2000-11-17  ┆ 2073599000 ┆ … ┆ null       ┆ error   ┆ [0.830483, ┆ -0.208379 │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 000        ┆   ┆            ┆         ┆ 0.678199,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.29341… ┆           │
  │ 2   ┆ 2000-05-20  ┆ 2000-06-16  ┆ 2419199000 ┆ … ┆ null       ┆ warn    ┆ [0.030795, ┆ 0.29103   │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 000        ┆   ┆            ┆         ┆ 0.535796,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.51113… ┆           │
  │ 2   ┆ 2000-06-21  ┆ 2000-07-10  ┆ 1727999000 ┆ … ┆ null       ┆ pending ┆ [0.768161, ┆ 1.933169  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 000        ┆   ┆            ┆         ┆ 0.494302,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.10754… ┆           │
  │ 3   ┆ 2000-06-17  ┆ 2000-07-08  ┆ 1900799000 ┆ … ┆ null       ┆ ok      ┆ [0.066989, ┆ 0.937404  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 000        ┆   ┆            ┆         ┆ 0.205188,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.15021… ┆           │
  │ …   ┆ …           ┆ …           ┆ …          ┆ … ┆ …          ┆ …       ┆ …          ┆ …         │
  │ 48  ┆ 2000-02-09  ┆ 2000-02-24  ┆ 1382399000 ┆ … ┆ 34170      ┆ ok      ┆ null       ┆ 1.012743  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 000        ┆   ┆            ┆         ┆            ┆           │
  │ 49  ┆ 2000-05-17  ┆ 2000-06-14  ┆ 2505599000 ┆ … ┆ 29542      ┆ error   ┆ null       ┆ 0.151807  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 000        ┆   ┆            ┆         ┆            ┆           │
  │ 49  ┆ 2000-05-30  ┆ 2000-06-10  ┆ 1036799000 ┆ … ┆ 12596      ┆ ok      ┆ null       ┆ 0.240084  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 000        ┆   ┆            ┆         ┆            ┆           │
  │ 50  ┆ 2000-10-30  ┆ 2000-11-09  ┆ 9503990000 ┆ … ┆ 40110      ┆ error   ┆ null       ┆ -0.571799 │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 00         ┆   ┆            ┆         ┆            ┆           │
  │ 50  ┆ 2000-11-22  ┆ 2000-12-10  ┆ 1641599000 ┆ … ┆ 35807      ┆ warn    ┆ null       ┆ -0.942775 │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 000        ┆   ┆            ┆         ┆            ┆           │
  └─────┴─────────────┴─────────────┴────────────┴───┴────────────┴─────────┴────────────┴───────────┘
# ---
# name: TestRankCriterionFilterEntities.test_ranks_explicit[timestep-event]
  shape: (100, 8)
  ┌─────┬───────┬───────────┬────────────┬───────────────┬─────────┬─────────────────────┬───────────┐
  │ id  ┆ time  ┆ duration  ┆ flag_valid ┆ response_time ┆ status  ┆ token_emb           ┆ value     │
  │ --- ┆ ---   ┆ ---       ┆ ---        ┆ ---           ┆ ---     ┆ ---                 ┆ ---       │
  │ i64 ┆ f64   ┆ f64       ┆ bool       ┆ i64           ┆ str     ┆ array[f32, 32]      ┆ f64       │
  ╞═════╪═══════╪═══════════╪════════════╪═══════════════╪═════════╪═════════════════════╪═══════════╡
  │ 1   ┆ 278.0 ┆ 17.999988 ┆ false      ┆ null          ┆ pending ┆ [0.764766, 0.52712, ┆ -1.463386 │
  │     ┆       ┆           ┆            ┆               ┆         ┆ … 0.126464…         ┆           │
  │ 1   ┆ 298.0 ┆ 23.999988 ┆ true       ┆ null          ┆ warn    ┆ [0.45854, 0.092267, ┆ -0.569401 │
  │     ┆       ┆           ┆            ┆               ┆         ┆ … 0.230326…         ┆           │
  │ 2   ┆ 140.0 ┆ 27.999988 ┆ true       ┆ null          ┆ ok      ┆ [0.95878, 0.231858, ┆ -1.076522 │
  │     ┆       ┆           ┆            ┆               ┆         ┆ … 0.136027…         ┆           │
  │ 2   ┆ 172.0 ┆ 19.999988 ┆ true       ┆ null          ┆ error   ┆ [0.658153,          ┆ -0.411943 │
  │     ┆       ┆           ┆            ┆               ┆         ┆ 0.230153, …         ┆           │
  │     ┆       ┆           ┆            ┆               ┆         ┆ 0.25054…            ┆           │
  │ 3   ┆ 168.0 ┆ 21.999988 ┆ true       ┆ null          ┆ warn    ┆ [0.941584,          ┆ 0.68985   │
  │     ┆       ┆           ┆            ┆               ┆         ┆ 0.564319, …         ┆           │
  │     ┆       ┆           ┆            ┆               ┆         ┆ 0.84133…            ┆           │
  │ …   ┆ …     ┆ …         ┆ …          ┆ …             ┆ …       ┆ …                   ┆ …         │
  │ 48  ┆ 39.0  ┆ 15.999988 ┆ null       ┆ 35371         ┆ pending ┆ null                ┆ -1.185557 │
  │ 49  ┆ 137.0 ┆ 28.999988 ┆ null       ┆ 39788         ┆ ok      ┆ null                ┆ -0.136142 │
  │ 49  ┆ 150.0 ┆ 11.999988 ┆ null       ┆ 41409         ┆ ok      ┆ null                ┆ 0.724094  │
  │ 50  ┆ 303.0 ┆ 10.999988 ┆ null       ┆ 16160         ┆ warn    ┆ null                ┆ 0.817304  │
  │ 50  ┆ 326.0 ┆ 18.999988 ┆ null       ┆ 9766          ┆ error   ┆ null                ┆ -1.032358 │
  └─────┴───────┴───────────┴────────────┴───────────────┴─────────┴─────────────────────┴───────────┘
# ---
# name: TestRankCriterionFilterEntities.test_ranks_explicit[timestep-interval]
  shape: (100, 9)
  ┌─────┬───────┬────────────┬───────────┬───┬───────────────┬─────────┬─────────────────┬───────────┐
  │ id  ┆ start ┆ end        ┆ duration  ┆ … ┆ response_time ┆ status  ┆ token_emb       ┆ value     │
  │ --- ┆ ---   ┆ ---        ┆ ---       ┆   ┆ ---           ┆ ---     ┆ ---             ┆ ---       │
  │ i64 ┆ f64   ┆ f64        ┆ f64       ┆   ┆ i64           ┆ str     ┆ array[f32, 32]  ┆ f64       │
  ╞═════╪═══════╪════════════╪═══════════╪═══╪═══════════════╪═════════╪═════════════════╪═══════════╡
  │ 1   ┆ 278.0 ┆ 295.999988 ┆ 17.999988 ┆ … ┆ null          ┆ pending ┆ [0.764766,      ┆ -1.463386 │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.52712, …      ┆           │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.126464…       ┆           │
  │ 1   ┆ 298.0 ┆ 321.999988 ┆ 23.999988 ┆ … ┆ null          ┆ warn    ┆ [0.45854,       ┆ -0.569401 │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.092267, …     ┆           │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.230326…       ┆           │
  │ 2   ┆ 140.0 ┆ 167.999988 ┆ 27.999988 ┆ … ┆ null          ┆ ok      ┆ [0.95878,       ┆ -1.076522 │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.231858, …     ┆           │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.136027…       ┆           │
  │ 2   ┆ 172.0 ┆ 191.999988 ┆ 19.999988 ┆ … ┆ null          ┆ error   ┆ [0.658153,      ┆ -0.411943 │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.230153, …     ┆           │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.25054…        ┆           │
  │ 3   ┆ 168.0 ┆ 189.999988 ┆ 21.999988 ┆ … ┆ null          ┆ warn    ┆ [0.941584,      ┆ 0.68985   │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.564319, …     ┆           │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.84133…        ┆           │
  │ …   ┆ …     ┆ …          ┆ …         ┆ … ┆ …             ┆ …       ┆ …               ┆ …         │
  │ 48  ┆ 39.0  ┆ 54.999988  ┆ 15.999988 ┆ … ┆ 35371         ┆ pending ┆ null            ┆ -1.185557 │
  │ 49  ┆ 137.0 ┆ 165.999988 ┆ 28.999988 ┆ … ┆ 39788         ┆ ok      ┆ null            ┆ -0.136142 │
  │ 49  ┆ 150.0 ┆ 161.999988 ┆ 11.999988 ┆ … ┆ 41409         ┆ ok      ┆ null            ┆ 0.724094  │
  │ 50  ┆ 303.0 ┆ 313.999988 ┆ 10.999988 ┆ … ┆ 16160         ┆ warn    ┆ null            ┆ 0.817304  │
  │ 50  ┆ 326.0 ┆ 344.999988 ┆ 18.999988 ┆ … ┆ 9766          ┆ error   ┆ null            ┆ -1.032358 │
  └─────┴───────┴────────────┴───────────┴───┴───────────────┴─────────┴─────────────────┴───────────┘
# ---
# name: TestRankCriterionFilterEntities.test_relative_mode_snapshot[datetime-event]
  shape: (50, 9)
  ┌─────┬─────────────┬─────────────┬────────────┬───┬─────────────┬────────┬────────────┬───────────┐
  │ id  ┆ time        ┆ duration    ┆ flag_valid ┆ … ┆ response_ti ┆ status ┆ token_emb  ┆ value     │
  │ --- ┆ ---         ┆ ---         ┆ ---        ┆   ┆ me          ┆ ---    ┆ ---        ┆ ---       │
  │ i64 ┆ datetime[μs ┆ i64         ┆ bool       ┆   ┆ ---         ┆ str    ┆ array[f32, ┆ f64       │
  │     ┆ ]           ┆             ┆            ┆   ┆ i64         ┆        ┆ 32]        ┆           │
  ╞═════╪═════════════╪═════════════╪════════════╪═══╪═════════════╪════════╪════════════╪═══════════╡
  │ 1   ┆ 2000-10-05  ┆ 15551990000 ┆ false      ┆ … ┆ null        ┆ warn   ┆ [0.215175, ┆ 0.541712  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆             ┆        ┆ 0.725006,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆             ┆        ┆ … 0.24879… ┆           │
  │ 2   ┆ 2000-05-20  ┆ 24191990000 ┆ true       ┆ … ┆ null        ┆ warn   ┆ [0.030795, ┆ 0.29103   │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆             ┆        ┆ 0.535796,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆             ┆        ┆ … 0.51113… ┆           │
  │ 3   ┆ 2000-06-17  ┆ 19007990000 ┆ true       ┆ … ┆ null        ┆ ok     ┆ [0.066989, ┆ 0.937404  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆             ┆        ┆ 0.205188,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆             ┆        ┆ … 0.15021… ┆           │
  │ 4   ┆ 2000-12-29  ┆ 25919990000 ┆ true       ┆ … ┆ null        ┆ warn   ┆ [0.299888, ┆ 1.373719  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆             ┆        ┆ 0.023271,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆             ┆        ┆ … 0.85800… ┆           │
  │ 5   ┆ 2000-10-20  ┆ 14687990000 ┆ true       ┆ … ┆ null        ┆ warn   ┆ [0.250615, ┆ -0.291042 │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆             ┆        ┆ 0.859724,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆             ┆        ┆ … 0.15456… ┆           │
  │ …   ┆ …           ┆ …           ┆ …          ┆ … ┆ …           ┆ …      ┆ …          ┆ …         │
  │ 46  ┆ 2000-08-15  ┆ 13823990000 ┆ null       ┆ … ┆ 7215        ┆ error  ┆ null       ┆ 0.745596  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆             ┆        ┆            ┆           │
  │ 47  ┆ 2000-01-18  ┆ 95039900000 ┆ null       ┆ … ┆ 44741       ┆ error  ┆ null       ┆ -1.429389 │
  │     ┆ 00:00:00    ┆ 0           ┆            ┆   ┆             ┆        ┆            ┆           │
  │ 48  ┆ 2000-01-31  ┆ 12959990000 ┆ null       ┆ … ┆ 37814       ┆ warn   ┆ null       ┆ 0.763366  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆             ┆        ┆            ┆           │
  │ 49  ┆ 2000-05-17  ┆ 25055990000 ┆ null       ┆ … ┆ 29542       ┆ error  ┆ null       ┆ 0.151807  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆             ┆        ┆            ┆           │
  │ 50  ┆ 2000-10-30  ┆ 95039900000 ┆ null       ┆ … ┆ 40110       ┆ error  ┆ null       ┆ -0.571799 │
  │     ┆ 00:00:00    ┆ 0           ┆            ┆   ┆             ┆        ┆            ┆           │
  └─────┴─────────────┴─────────────┴────────────┴───┴─────────────┴────────┴────────────┴───────────┘
# ---
# name: TestRankCriterionFilterEntities.test_relative_mode_snapshot[datetime-interval]
  shape: (50, 10)
  ┌─────┬─────────────┬─────────────┬─────────────┬───┬────────────┬────────┬────────────┬───────────┐
  │ id  ┆ start       ┆ end         ┆ duration    ┆ … ┆ response_t ┆ status ┆ token_emb  ┆ value     │
  │ --- ┆ ---         ┆ ---         ┆ ---         ┆   ┆ ime        ┆ ---    ┆ ---        ┆ ---       │
  │ i64 ┆ datetime[μs ┆ datetime[μs ┆ i64         ┆   ┆ ---        ┆ str    ┆ array[f32, ┆ f64       │
  │     ┆ ]           ┆ ]           ┆             ┆   ┆ i64        ┆        ┆ 32]        ┆           │
  ╞═════╪═════════════╪═════════════╪═════════════╪═══╪════════════╪════════╪════════════╪═══════════╡
  │ 1   ┆ 2000-10-05  ┆ 2000-10-22  ┆ 15551990000 ┆ … ┆ null       ┆ warn   ┆ [0.215175, ┆ 0.541712  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 00          ┆   ┆            ┆        ┆ 0.725006,  ┆           │
  │     ┆             ┆             ┆             ┆   ┆            ┆        ┆ … 0.24879… ┆           │
  │ 2   ┆ 2000-05-20  ┆ 2000-06-16  ┆ 24191990000 ┆ … ┆ null       ┆ warn   ┆ [0.030795, ┆ 0.29103   │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 00          ┆   ┆            ┆        ┆ 0.535796,  ┆           │
  │     ┆             ┆             ┆             ┆   ┆            ┆        ┆ … 0.51113… ┆           │
  │ 3   ┆ 2000-06-17  ┆ 2000-07-08  ┆ 19007990000 ┆ … ┆ null       ┆ ok     ┆ [0.066989, ┆ 0.937404  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 00          ┆   ┆            ┆        ┆ 0.205188,  ┆           │
  │     ┆             ┆             ┆             ┆   ┆            ┆        ┆ … 0.15021… ┆           │
  │ 4   ┆ 2000-12-29  ┆ 2001-01-27  ┆ 25919990000 ┆ … ┆ null       ┆ warn   ┆ [0.299888, ┆ 1.373719  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 00          ┆   ┆            ┆        ┆ 0.023271,  ┆           │
  │     ┆             ┆             ┆             ┆   ┆            ┆        ┆ … 0.85800… ┆           │
  │ 5   ┆ 2000-10-20  ┆ 2000-11-05  ┆ 14687990000 ┆ … ┆ null       ┆ warn   ┆ [0.250615, ┆ -0.291042 │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 00          ┆   ┆            ┆        ┆ 0.859724,  ┆           │
  │     ┆             ┆             ┆             ┆   ┆            ┆        ┆ … 0.15456… ┆           │
  │ …   ┆ …           ┆ …           ┆ …           ┆ … ┆ …          ┆ …      ┆ …          ┆ …         │
  │ 46  ┆ 2000-08-15  ┆ 2000-08-30  ┆ 13823990000 ┆ … ┆ 7215       ┆ error  ┆ null       ┆ 0.745596  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 00          ┆   ┆            ┆        ┆            ┆           │
  │ 47  ┆ 2000-01-18  ┆ 2000-01-28  ┆ 95039900000 ┆ … ┆ 44741      ┆ error  ┆ null       ┆ -1.429389 │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 0           ┆   ┆            ┆        ┆            ┆           │
  │ 48  ┆ 2000-01-31  ┆ 2000-02-14  ┆ 12959990000 ┆ … ┆ 37814      ┆ warn   ┆ null       ┆ 0.763366  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 00          ┆   ┆            ┆        ┆            ┆           │
  │ 49  ┆ 2000-05-17  ┆ 2000-06-14  ┆ 25055990000 ┆ … ┆ 29542      ┆ error  ┆ null       ┆ 0.151807  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 00          ┆   ┆            ┆        ┆            ┆           │
  │ 50  ┆ 2000-10-30  ┆ 2000-11-09  ┆ 95039900000 ┆ … ┆ 40110      ┆ error  ┆ null       ┆ -0.571799 │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 0           ┆   ┆            ┆        ┆            ┆           │
  └─────┴─────────────┴─────────────┴─────────────┴───┴────────────┴────────┴────────────┴───────────┘
# ---
# name: TestRankCriterionFilterEntities.test_relative_mode_snapshot[timestep-event]
  shape: (50, 8)
  ┌─────┬───────┬───────────┬────────────┬───────────────┬─────────┬─────────────────────┬───────────┐
  │ id  ┆ time  ┆ duration  ┆ flag_valid ┆ response_time ┆ status  ┆ token_emb           ┆ value     │
  │ --- ┆ ---   ┆ ---       ┆ ---        ┆ ---           ┆ ---     ┆ ---                 ┆ ---       │
  │ i64 ┆ f64   ┆ f64       ┆ bool       ┆ i64           ┆ str     ┆ array[f32, 32]      ┆ f64       │
  ╞═════╪═══════╪═══════════╪════════════╪═══════════════╪═════════╪═════════════════════╪═══════════╡
  │ 1   ┆ 278.0 ┆ 17.999988 ┆ false      ┆ null          ┆ pending ┆ [0.764766, 0.52712, ┆ -1.463386 │
  │     ┆       ┆           ┆            ┆               ┆         ┆ … 0.126464…         ┆           │
  │ 2   ┆ 140.0 ┆ 27.999988 ┆ true       ┆ null          ┆ ok      ┆ [0.95878, 0.231858, ┆ -1.076522 │
  │     ┆       ┆           ┆            ┆               ┆         ┆ … 0.136027…         ┆           │
  │ 3   ┆ 168.0 ┆ 21.999988 ┆ true       ┆ null          ┆ warn    ┆ [0.941584,          ┆ 0.68985   │
  │     ┆       ┆           ┆            ┆               ┆         ┆ 0.564319, …         ┆           │
  │     ┆       ┆           ┆            ┆               ┆         ┆ 0.84133…            ┆           │
  │ 4   ┆ 363.0 ┆ 29.999988 ┆ true       ┆ null          ┆ warn    ┆ [0.720277, 0.54933, ┆ 0.749229  │
  │     ┆       ┆           ┆            ┆               ┆         ┆ … 0.985236…         ┆           │
  │ 5   ┆ 293.0 ┆ 16.999988 ┆ true       ┆ null          ┆ error   ┆ [0.162942,          ┆ -0.333873 │
  │     ┆       ┆           ┆            ┆               ┆         ┆ 0.889126, …         ┆           │
  │     ┆       ┆           ┆            ┆               ┆         ┆ 0.58025…            ┆           │
  │ …   ┆ …     ┆ …         ┆ …          ┆ …             ┆ …       ┆ …                   ┆ …         │
  │ 46  ┆ 227.0 ┆ 15.999988 ┆ null       ┆ 36189         ┆ error   ┆ null                ┆ -0.382373 │
  │ 47  ┆ 17.0  ┆ 10.999988 ┆ null       ┆ 35341         ┆ ok      ┆ null                ┆ 2.25425   │
  │ 48  ┆ 30.0  ┆ 14.999988 ┆ null       ┆ 16386         ┆ ok      ┆ null                ┆ 0.439012  │
  │ 49  ┆ 137.0 ┆ 28.999988 ┆ null       ┆ 39788         ┆ ok      ┆ null                ┆ -0.136142 │
  │ 50  ┆ 303.0 ┆ 10.999988 ┆ null       ┆ 16160         ┆ warn    ┆ null                ┆ 0.817304  │
  └─────┴───────┴───────────┴────────────┴───────────────┴─────────┴─────────────────────┴───────────┘
# ---
# name: TestRankCriterionFilterEntities.test_relative_mode_snapshot[timestep-interval]
  shape: (50, 9)
  ┌─────┬───────┬────────────┬───────────┬───┬───────────────┬─────────┬─────────────────┬───────────┐
  │ id  ┆ start ┆ end        ┆ duration  ┆ … ┆ response_time ┆ status  ┆ token_emb       ┆ value     │
  │ --- ┆ ---   ┆ ---        ┆ ---       ┆   ┆ ---           ┆ ---     ┆ ---             ┆ ---       │
  │ i64 ┆ f64   ┆ f64        ┆ f64       ┆   ┆ i64           ┆ str     ┆ array[f32, 32]  ┆ f64       │
  ╞═════╪═══════╪════════════╪═══════════╪═══╪═══════════════╪═════════╪═════════════════╪═══════════╡
  │ 1   ┆ 278.0 ┆ 295.999988 ┆ 17.999988 ┆ … ┆ null          ┆ pending ┆ [0.764766,      ┆ -1.463386 │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.52712, …      ┆           │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.126464…       ┆           │
  │ 2   ┆ 140.0 ┆ 167.999988 ┆ 27.999988 ┆ … ┆ null          ┆ ok      ┆ [0.95878,       ┆ -1.076522 │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.231858, …     ┆           │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.136027…       ┆           │
  │ 3   ┆ 168.0 ┆ 189.999988 ┆ 21.999988 ┆ … ┆ null          ┆ warn    ┆ [0.941584,      ┆ 0.68985   │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.564319, …     ┆           │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.84133…        ┆           │
  │ 4   ┆ 363.0 ┆ 392.999988 ┆ 29.999988 ┆ … ┆ null          ┆ warn    ┆ [0.720277,      ┆ 0.749229  │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.54933, …      ┆           │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.985236…       ┆           │
  │ 5   ┆ 293.0 ┆ 309.999988 ┆ 16.999988 ┆ … ┆ null          ┆ error   ┆ [0.162942,      ┆ -0.333873 │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.889126, …     ┆           │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.58025…        ┆           │
  │ …   ┆ …     ┆ …          ┆ …         ┆ … ┆ …             ┆ …       ┆ …               ┆ …         │
  │ 46  ┆ 227.0 ┆ 242.999988 ┆ 15.999988 ┆ … ┆ 36189         ┆ error   ┆ null            ┆ -0.382373 │
  │ 47  ┆ 17.0  ┆ 27.999988  ┆ 10.999988 ┆ … ┆ 35341         ┆ ok      ┆ null            ┆ 2.25425   │
  │ 48  ┆ 30.0  ┆ 44.999988  ┆ 14.999988 ┆ … ┆ 16386         ┆ ok      ┆ null            ┆ 0.439012  │
  │ 49  ┆ 137.0 ┆ 165.999988 ┆ 28.999988 ┆ … ┆ 39788         ┆ ok      ┆ null            ┆ -0.136142 │
  │ 50  ┆ 303.0 ┆ 313.999988 ┆ 10.999988 ┆ … ┆ 16160         ┆ warn    ┆ null            ┆ 0.817304  │
  └─────┴───────┴────────────┴───────────┴───┴───────────────┴─────────┴─────────────────┴───────────┘
# ---
# name: TestRankCriterionFilterEntities.test_start_end_step[datetime-event]
  shape: (100, 9)
  ┌─────┬─────────────┬─────────────┬────────────┬───┬────────────┬─────────┬────────────┬───────────┐
  │ id  ┆ time        ┆ duration    ┆ flag_valid ┆ … ┆ response_t ┆ status  ┆ token_emb  ┆ value     │
  │ --- ┆ ---         ┆ ---         ┆ ---        ┆   ┆ ime        ┆ ---     ┆ ---        ┆ ---       │
  │ i64 ┆ datetime[μs ┆ i64         ┆ bool       ┆   ┆ ---        ┆ str     ┆ array[f32, ┆ f64       │
  │     ┆ ]           ┆             ┆            ┆   ┆ i64        ┆         ┆ 32]        ┆           │
  ╞═════╪═════════════╪═════════════╪════════════╪═══╪════════════╪═════════╪════════════╪═══════════╡
  │ 1   ┆ 2000-10-05  ┆ 15551990000 ┆ false      ┆ … ┆ null       ┆ warn    ┆ [0.215175, ┆ 0.541712  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆            ┆         ┆ 0.725006,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.24879… ┆           │
  │ 1   ┆ 2000-10-25  ┆ 20735990000 ┆ true       ┆ … ┆ null       ┆ error   ┆ [0.830483, ┆ -0.208379 │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆            ┆         ┆ 0.678199,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.29341… ┆           │
  │ 2   ┆ 2000-05-20  ┆ 24191990000 ┆ true       ┆ … ┆ null       ┆ warn    ┆ [0.030795, ┆ 0.29103   │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆            ┆         ┆ 0.535796,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.51113… ┆           │
  │ 2   ┆ 2000-06-21  ┆ 17279990000 ┆ true       ┆ … ┆ null       ┆ pending ┆ [0.768161, ┆ 1.933169  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆            ┆         ┆ 0.494302,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.10754… ┆           │
  │ 3   ┆ 2000-06-17  ┆ 19007990000 ┆ true       ┆ … ┆ null       ┆ ok      ┆ [0.066989, ┆ 0.937404  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆            ┆         ┆ 0.205188,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.15021… ┆           │
  │ …   ┆ …           ┆ …           ┆ …          ┆ … ┆ …          ┆ …       ┆ …          ┆ …         │
  │ 48  ┆ 2000-02-09  ┆ 13823990000 ┆ null       ┆ … ┆ 34170      ┆ ok      ┆ null       ┆ 1.012743  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆            ┆         ┆            ┆           │
  │ 49  ┆ 2000-05-17  ┆ 25055990000 ┆ null       ┆ … ┆ 29542      ┆ error   ┆ null       ┆ 0.151807  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆            ┆         ┆            ┆           │
  │ 49  ┆ 2000-05-30  ┆ 10367990000 ┆ null       ┆ … ┆ 12596      ┆ ok      ┆ null       ┆ 0.240084  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆            ┆         ┆            ┆           │
  │ 50  ┆ 2000-10-30  ┆ 95039900000 ┆ null       ┆ … ┆ 40110      ┆ error   ┆ null       ┆ -0.571799 │
  │     ┆ 00:00:00    ┆ 0           ┆            ┆   ┆            ┆         ┆            ┆           │
  │ 50  ┆ 2000-11-22  ┆ 16415990000 ┆ null       ┆ … ┆ 35807      ┆ warn    ┆ null       ┆ -0.942775 │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆            ┆         ┆            ┆           │
  └─────┴─────────────┴─────────────┴────────────┴───┴────────────┴─────────┴────────────┴───────────┘
# ---
# name: TestRankCriterionFilterEntities.test_start_end_step[datetime-interval]
  shape: (100, 10)
  ┌─────┬─────────────┬─────────────┬────────────┬───┬────────────┬─────────┬────────────┬───────────┐
  │ id  ┆ start       ┆ end         ┆ duration   ┆ … ┆ response_t ┆ status  ┆ token_emb  ┆ value     │
  │ --- ┆ ---         ┆ ---         ┆ ---        ┆   ┆ ime        ┆ ---     ┆ ---        ┆ ---       │
  │ i64 ┆ datetime[μs ┆ datetime[μs ┆ i64        ┆   ┆ ---        ┆ str     ┆ array[f32, ┆ f64       │
  │     ┆ ]           ┆ ]           ┆            ┆   ┆ i64        ┆         ┆ 32]        ┆           │
  ╞═════╪═════════════╪═════════════╪════════════╪═══╪════════════╪═════════╪════════════╪═══════════╡
  │ 1   ┆ 2000-10-05  ┆ 2000-10-22  ┆ 1555199000 ┆ … ┆ null       ┆ warn    ┆ [0.215175, ┆ 0.541712  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 000        ┆   ┆            ┆         ┆ 0.725006,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.24879… ┆           │
  │ 1   ┆ 2000-10-25  ┆ 2000-11-17  ┆ 2073599000 ┆ … ┆ null       ┆ error   ┆ [0.830483, ┆ -0.208379 │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 000        ┆   ┆            ┆         ┆ 0.678199,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.29341… ┆           │
  │ 2   ┆ 2000-05-20  ┆ 2000-06-16  ┆ 2419199000 ┆ … ┆ null       ┆ warn    ┆ [0.030795, ┆ 0.29103   │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 000        ┆   ┆            ┆         ┆ 0.535796,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.51113… ┆           │
  │ 2   ┆ 2000-06-21  ┆ 2000-07-10  ┆ 1727999000 ┆ … ┆ null       ┆ pending ┆ [0.768161, ┆ 1.933169  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 000        ┆   ┆            ┆         ┆ 0.494302,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.10754… ┆           │
  │ 3   ┆ 2000-06-17  ┆ 2000-07-08  ┆ 1900799000 ┆ … ┆ null       ┆ ok      ┆ [0.066989, ┆ 0.937404  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 000        ┆   ┆            ┆         ┆ 0.205188,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.15021… ┆           │
  │ …   ┆ …           ┆ …           ┆ …          ┆ … ┆ …          ┆ …       ┆ …          ┆ …         │
  │ 48  ┆ 2000-02-09  ┆ 2000-02-24  ┆ 1382399000 ┆ … ┆ 34170      ┆ ok      ┆ null       ┆ 1.012743  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 000        ┆   ┆            ┆         ┆            ┆           │
  │ 49  ┆ 2000-05-17  ┆ 2000-06-14  ┆ 2505599000 ┆ … ┆ 29542      ┆ error   ┆ null       ┆ 0.151807  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 000        ┆   ┆            ┆         ┆            ┆           │
  │ 49  ┆ 2000-05-30  ┆ 2000-06-10  ┆ 1036799000 ┆ … ┆ 12596      ┆ ok      ┆ null       ┆ 0.240084  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 000        ┆   ┆            ┆         ┆            ┆           │
  │ 50  ┆ 2000-10-30  ┆ 2000-11-09  ┆ 9503990000 ┆ … ┆ 40110      ┆ error   ┆ null       ┆ -0.571799 │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 00         ┆   ┆            ┆         ┆            ┆           │
  │ 50  ┆ 2000-11-22  ┆ 2000-12-10  ┆ 1641599000 ┆ … ┆ 35807      ┆ warn    ┆ null       ┆ -0.942775 │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 000        ┆   ┆            ┆         ┆            ┆           │
  └─────┴─────────────┴─────────────┴────────────┴───┴────────────┴─────────┴────────────┴───────────┘
# ---
# name: TestRankCriterionFilterEntities.test_start_end_step[timestep-event]
  shape: (100, 8)
  ┌─────┬───────┬───────────┬────────────┬───────────────┬─────────┬─────────────────────┬───────────┐
  │ id  ┆ time  ┆ duration  ┆ flag_valid ┆ response_time ┆ status  ┆ token_emb           ┆ value     │
  │ --- ┆ ---   ┆ ---       ┆ ---        ┆ ---           ┆ ---     ┆ ---                 ┆ ---       │
  │ i64 ┆ f64   ┆ f64       ┆ bool       ┆ i64           ┆ str     ┆ array[f32, 32]      ┆ f64       │
  ╞═════╪═══════╪═══════════╪════════════╪═══════════════╪═════════╪═════════════════════╪═══════════╡
  │ 1   ┆ 278.0 ┆ 17.999988 ┆ false      ┆ null          ┆ pending ┆ [0.764766, 0.52712, ┆ -1.463386 │
  │     ┆       ┆           ┆            ┆               ┆         ┆ … 0.126464…         ┆           │
  │ 1   ┆ 298.0 ┆ 23.999988 ┆ true       ┆ null          ┆ warn    ┆ [0.45854, 0.092267, ┆ -0.569401 │
  │     ┆       ┆           ┆            ┆               ┆         ┆ … 0.230326…         ┆           │
  │ 2   ┆ 140.0 ┆ 27.999988 ┆ true       ┆ null          ┆ ok      ┆ [0.95878, 0.231858, ┆ -1.076522 │
  │     ┆       ┆           ┆            ┆               ┆         ┆ … 0.136027…         ┆           │
  │ 2   ┆ 172.0 ┆ 19.999988 ┆ true       ┆ null          ┆ error   ┆ [0.658153,          ┆ -0.411943 │
  │     ┆       ┆           ┆            ┆               ┆         ┆ 0.230153, …         ┆           │
  │     ┆       ┆           ┆            ┆               ┆         ┆ 0.25054…            ┆           │
  │ 3   ┆ 168.0 ┆ 21.999988 ┆ true       ┆ null          ┆ warn    ┆ [0.941584,          ┆ 0.68985   │
  │     ┆       ┆           ┆            ┆               ┆         ┆ 0.564319, …         ┆           │
  │     ┆       ┆           ┆            ┆               ┆         ┆ 0.84133…            ┆           │
  │ …   ┆ …     ┆ …         ┆ …          ┆ …             ┆ …       ┆ …                   ┆ …         │
  │ 48  ┆ 39.0  ┆ 15.999988 ┆ null       ┆ 35371         ┆ pending ┆ null                ┆ -1.185557 │
  │ 49  ┆ 137.0 ┆ 28.999988 ┆ null       ┆ 39788         ┆ ok      ┆ null                ┆ -0.136142 │
  │ 49  ┆ 150.0 ┆ 11.999988 ┆ null       ┆ 41409         ┆ ok      ┆ null                ┆ 0.724094  │
  │ 50  ┆ 303.0 ┆ 10.999988 ┆ null       ┆ 16160         ┆ warn    ┆ null                ┆ 0.817304  │
  │ 50  ┆ 326.0 ┆ 18.999988 ┆ null       ┆ 9766          ┆ error   ┆ null                ┆ -1.032358 │
  └─────┴───────┴───────────┴────────────┴───────────────┴─────────┴─────────────────────┴───────────┘
# ---
# name: TestRankCriterionFilterEntities.test_start_end_step[timestep-interval]
  shape: (100, 9)
  ┌─────┬───────┬────────────┬───────────┬───┬───────────────┬─────────┬─────────────────┬───────────┐
  │ id  ┆ start ┆ end        ┆ duration  ┆ … ┆ response_time ┆ status  ┆ token_emb       ┆ value     │
  │ --- ┆ ---   ┆ ---        ┆ ---       ┆   ┆ ---           ┆ ---     ┆ ---             ┆ ---       │
  │ i64 ┆ f64   ┆ f64        ┆ f64       ┆   ┆ i64           ┆ str     ┆ array[f32, 32]  ┆ f64       │
  ╞═════╪═══════╪════════════╪═══════════╪═══╪═══════════════╪═════════╪═════════════════╪═══════════╡
  │ 1   ┆ 278.0 ┆ 295.999988 ┆ 17.999988 ┆ … ┆ null          ┆ pending ┆ [0.764766,      ┆ -1.463386 │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.52712, …      ┆           │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.126464…       ┆           │
  │ 1   ┆ 298.0 ┆ 321.999988 ┆ 23.999988 ┆ … ┆ null          ┆ warn    ┆ [0.45854,       ┆ -0.569401 │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.092267, …     ┆           │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.230326…       ┆           │
  │ 2   ┆ 140.0 ┆ 167.999988 ┆ 27.999988 ┆ … ┆ null          ┆ ok      ┆ [0.95878,       ┆ -1.076522 │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.231858, …     ┆           │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.136027…       ┆           │
  │ 2   ┆ 172.0 ┆ 191.999988 ┆ 19.999988 ┆ … ┆ null          ┆ error   ┆ [0.658153,      ┆ -0.411943 │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.230153, …     ┆           │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.25054…        ┆           │
  │ 3   ┆ 168.0 ┆ 189.999988 ┆ 21.999988 ┆ … ┆ null          ┆ warn    ┆ [0.941584,      ┆ 0.68985   │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.564319, …     ┆           │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.84133…        ┆           │
  │ …   ┆ …     ┆ …          ┆ …         ┆ … ┆ …             ┆ …       ┆ …               ┆ …         │
  │ 48  ┆ 39.0  ┆ 54.999988  ┆ 15.999988 ┆ … ┆ 35371         ┆ pending ┆ null            ┆ -1.185557 │
  │ 49  ┆ 137.0 ┆ 165.999988 ┆ 28.999988 ┆ … ┆ 39788         ┆ ok      ┆ null            ┆ -0.136142 │
  │ 49  ┆ 150.0 ┆ 161.999988 ┆ 11.999988 ┆ … ┆ 41409         ┆ ok      ┆ null            ┆ 0.724094  │
  │ 50  ┆ 303.0 ┆ 313.999988 ┆ 10.999988 ┆ … ┆ 16160         ┆ warn    ┆ null            ┆ 0.817304  │
  │ 50  ┆ 326.0 ┆ 344.999988 ┆ 18.999988 ┆ … ┆ 9766          ┆ error   ┆ null            ┆ -1.032358 │
  └─────┴───────┴────────────┴───────────┴───┴───────────────┴─────────┴─────────────────┴───────────┘
# ---
